# SNISPF-HJ

./: README.md  README_FA.md  __init__.py  cli.py  config.json  forwarder.py  pool.py  pyproject.toml  sni_discovery.py
sni_spoofing/: __init__.py  cli.py  forwarder.py  ip_discovery.py  pool.py  sni_discovery.py
tests/: test_tls.py
